tests/compile_fail/offset_unaligned.stderr
error[E0080]: evaluation panicked: 
              assertion failed.
              Failed to implement `ShaderLayout`: Field `OffsetUnaligned::a4` is not properly aligned. The offset is 4 but required align is 16
              
 --> tests/compile_fail/offset_unaligned.rs:3:1
  |
3 | / shader_layout! {
4 | |
5 | |     pub struct OffsetUnaligned {
6 | |         a1: f32,
... |
9 | | }
  | |_^ evaluation of `_::_` failed here
  |
  = note: this error originates in the macro `shader_layout` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
